# mr_validator_homework

./: .gitignore  README.md  pyproject.toml  requirements.txt
mini/: README.md  mini_validator.py
src/mr_validator/: __init__.py  cli.py  errors.py  extractor.py  gitlab_client.py  jira_client.py  logger.py  models.py  reporter.py  rules_engine.py
tests/e2e/: test_e2e.py
tests/unit/: test_cli.py  test_clients.py  test_extractor.py  test_rules_engine.py
utils/: __init__.py  logger.py
