[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-validator"
version = "0.1.0"
description = "Pre-merge gate: validates that a GitLab MR references Jira tickets in the right state."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mr-validator = "mr_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that hit gitlab.com and spawn the mock Jira server",
]
