[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mr-validator"
version = "0.1.0"
description = "Pre-merge gate: validates that a GitLab MR references Jira tickets in the right state."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mr-validator = "mr_validator.cli:main"

# Two packages ship together: the tool itself (under src/) and the shared
# utils package (at the repo root, reusable by other tools).
[tool.setuptools]
packages = ["mr_validator", "utils"]

[tool.setuptools.package-dir]
mr_validator = "src/mr_validator"
utils = "utils"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that hit gitlab.com and spawn the mock Jira server",
]
